Update image sources for textures in index.html
The HTML structure remains the same, but the image sources for the textures have been updated to remove the 'assets/' prefix.

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
       ></a-entity>
 
       <a-assets>
-        <img id="milo-texture" src="assets/milo.png" />
+        <img id="milo-texture" src="milo.png" />
       </a-assets>
 
       <a-assets>
-        <img id="milk-texture" src="assets/milk.png" />
+        <img id="milk-texture" src="milk.png" />
       </a-assets>
 
       <a-assets>
-        <img id="tile-texture" src="assets/tiles.png" />
+        <img id="tile-texture" src="tiles.png" />
       </a-assets>
 
       <a-assets>
-        <img id="rug-texture" src="assets/rug.png" />
+        <img id="rug-texture" src="rug.png" />
       </a-assets>
 
       <a-assets>
-        <img id="wall-texture" src="assets/wall.png" />
+        <img id="wall-texture" src="wall.png" />
       </a-assets>
 
       <!-- GROUND -->
@@ -336,3 +336,4 @@
     </a-scene>
   </body>
 </html>
+
